# CrystalLink

common/: Cargo.toml
common/src/: lib.rs
receiver-win/: Cargo.toml
receiver-win/src/: main.rs
sender-mac/: Cargo.toml
sender-mac/src/: main.rs
