[package]
name = "crystallink-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
crystallink-protocol = { path = "../common" }
screencapturekit = "0.2" # or latest
tokio = { version = "1", features = ["full"] }
lz4_flex = "0.11"
serde = "1.0"
bincode = "1.3"
image = "0.24"
objc = "0.2"
core-graphics = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific deps
